# afsim

./: CMakeLists.txt  wsf_cmake_extension.cmake
Boost/lib/: boost_atomic-vc142-mt-gd-x32-1_90.lib  boost_atomic-vc142-mt-gd-x64-1_90.lib  boost_atomic-vc142-mt-x32-1_90.lib  boost_atomic-vc142-mt-x64-1_90.lib  boost_chrono-vc142-mt-gd-x32-1_90.lib  boost_chrono-vc142-mt-gd-x64-1_90.lib  boost_chrono-vc142-mt-x32-1_90.lib  boost_chrono-vc142-mt-x64-1_90.lib  boost_container-vc142-mt-gd-x32-1_90.lib  boost_container-vc142-mt-gd-x64-1_90.lib  boost_container-vc142-mt-x32-1_90.lib  boost_date_time-vc142-mt-gd-x32-1_90.lib  boost_date_time-vc142-mt-gd-x64-1_90.lib  boost_date_time-vc142-mt-x32-1_90.lib  boost_date_time-vc142-mt-x64-1_90.lib  boost_filesystem-vc142-mt-gd-x32-1_90.lib  boost_filesystem-vc142-mt-gd-x64-1_90.lib  boost_filesystem-vc142-mt-x32-1_90.lib  boost_filesystem-vc142-mt-x64-1_90.lib  boost_regex-vc142-mt-gd-x32-1_90.lib  boost_regex-vc142-mt-gd-x64-1_90.lib  boost_regex-vc142-mt-x32-1_90.lib  boost_regex-vc142-mt-x64-1_90.lib  boost_serialization-vc142-mt-gd-x32-1_90.lib  (+74 more)
data/: xdu_operation_control_scenario.txt
source/: ClientSession.cpp  ClientSession.hpp  GetPlatformData.cpp  GetPlatformData.hpp  OnboardComputer.cpp  OnboardComputer.hpp  OnboardComputerEvents.cpp  OnboardComputerEvents.hpp  OnboardComputerExtension.cpp  OnboardComputerExtension.hpp  PlatformDataCollector.cpp  PlatformDataCollector.hpp  PluginRegistration.cpp  TcpServer.cpp  TcpServer.hpp  UDPJsonSender.cpp  UDPJsonSender.hpp  UdpUnicastReceiver.cpp  UdpUnicastReceiver.hpp
(+119 files in other folders)
